[gd_scene load_steps=5 format=2]

[ext_resource path="res://blocks/block_move_2.svg" type="Texture" id=1]
[ext_resource path="res://blocks/Block.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128.5, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 16 )

[node name="BlockMove" type="StaticBody2D" groups=["Block"]]
collision_mask = 0
input_pickable = true
script = ExtResource( 2 )

[node name="BlockMove" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 128.5, 0 )
shape = SubResource( 1 )

[node name="ListFinder" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ListFinder"]
position = Vector2( 129, 0 )
shape = SubResource( 2 )

[connection signal="input_event" from="." to="." method="_on_Block_input_event"]
